[gd_scene load_steps=7 format=3 uid="uid://cyeyyxks44kfo"]

[ext_resource type="Theme" uid="uid://b253fn54dru5h" path="res://style/ship.tres" id="1_3cf72"]
[ext_resource type="Script" uid="uid://b38m71veordr0" path="res://scripts/ship_ui.gd" id="2_44bqc"]
[ext_resource type="Texture2D" uid="uid://cjrt5b8br7cuv" path="res://assets/pixil-frame-0.png" id="2_du0qj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gudjc"]
bg_color = Color(0.6, 0.6, 0.6, 0.184314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tfsc7"]
bg_color = Color(0.979412, 0.000788382, 0.979405, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8qiel"]
bg_color = Color(0.172833, 0.172833, 0.172833, 1)

[node name="ShipUI" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3cf72")
script = ExtResource("2_44bqc")

[node name="Crosshair" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(626, 366)
scale = Vector2(10, 10)
texture = ExtResource("2_du0qj")

[node name="HealthContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -60.0
offset_right = 180.0
grow_vertical = 0
theme = ExtResource("1_3cf72")
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 10

[node name="HealthBar" type="ProgressBar" parent="HealthContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_gudjc")
theme_override_styles/fill = SubResource("StyleBoxFlat_tfsc7")
value = 100.0

[node name="MagContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -69.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_3cf72")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MagBar" type="ProgressBar" parent="MagContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_8qiel")
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="MagContainer/MagBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="Stats" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ColorRect" type="ColorRect" parent="Stats"]
layout_mode = 2
color = Color(0.306923, 0.306923, 0.306923, 0.827451)

[node name="StatsContainer" type="VBoxContainer" parent="Stats"]
layout_mode = 2

[node name="Killed" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -15.0
offset_right = 15.0
offset_bottom = 28.0
grow_horizontal = 2
